# Fushi

./: .gitignore  .pre-commit-config.yaml  README.md  fushi  fushi.spec  pyproject.toml  pyrightconfig.json
Fushi/: engine.py  uci.py
Fushi/evaluate/: __init__.py  shannon.py
Fushi/evaluator/: __init__.py
Fushi/search/: __init__.py  basic.py  brute_force.py
Fushi/searcher/: BasicSearcher.py  __init__.py
arena/: README.md  arena.py  extract_fens.py  openings.fen  pyproject.toml
scripts/: bench.py
src/Fushi/: engine.py  uci.py
src/Fushi/book/: __init__.py  polyglot.py
src/Fushi/evaluate/: __init__.py  enhanced_shannon.py  king_safety.py  pst.py  shannon.py
src/Fushi/search/: __init__.py  alphabeta.py  basic.py  book.py  brute_force.py  dfs.py  minmax.py  tt.py
tests/: test_searchers.py  test_tt.py
