[project]
name = "Fushi"
version = "0.1.0"
description = "A Chess Engine"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chess>=1.11.2",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyinstaller>=6.19.0",
    "pyright>=1.1.408",
    "requests>=2.32.5",
    "ruff>=0.15.2",
    "tqdm>=4.67.3",
    "zstandard>=0.25.0",
]
